--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "lucide-react": "^0.290.0",
     "clsx": "^2.0.0",
     "tailwind-merge": "^2.0.0",
-    "class-variance-authority": "^0.7.0"
+    "class-variance-authority": "^0.7.0",
+    "chokidar": "^3.5.3",
+    "recharts": "^2.8.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.0",
