feat: Implement atomic design system and comprehensive org-mode integration
- Restructure components using atomic design principles (atoms/molecules/organisms/templates)
- Add comprehensive org-mode parser with lexical analysis and full GTD support
- Implement file system API routes for org-mode file operations
- Add Docker containerization with development and production configurations
- Create extensive TypeScript type system (370+ lines) for GTD workflows
- Add comprehensive documentation and architecture specifications
- Include sample org-mode files and test fixtures
- Update project structure to feature-based architecture
- Implement centralized component exports for clean API

This completes Phase 1 (Foundation) and most of Phase 2 (Data Layer) of the development roadmap.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "GTD (Getting Things Done) front-end application with Monday.com-style interface",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
