fix: resolve ESLint errors and improve TypeScript type safety
- Fix ESLint configuration for TypeScript plugin
- Remove deprecated Next.js appDir config and duplicate experimental blocks
- Add missing TypeScript path mappings for @/lib/*
- Create centralized logger utility for environment-aware logging
- Replace all 'any' types with proper TypeScript types
- Fix unused variables and React Hook dependencies
- Remove direct console usage throughout codebase
- Add comprehensive documentation for configuration changes
- Ensure build completes successfully with no blocking errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,11 +23,12 @@
       "@/*": ["./src/*"],
       "@/components/*": ["./src/components/*"],
       "@/pages/*": ["./src/pages/*"],
-      "@/hooks/*": ["./src/hooks/*"],
-      "@/stores/*": ["./src/stores/*"],
-      "@/types/*": ["./src/types/*"],
-      "@/utils/*": ["./src/utils/*"],
-      "@/styles/*": ["./src/styles/*"]
+      "@/hooks/*": ["./src/lib/hooks/*"],
+      "@/stores/*": ["./src/lib/stores/*"],
+      "@/types/*": ["./src/lib/types/*"],
+      "@/utils/*": ["./src/lib/utils/*"],
+      "@/styles/*": ["./src/styles/*"],
+      "@/lib/*": ["./src/lib/*"]
     }
   },
   "include": [
